--- a/Analysis and Modelling/Potato Plant Disease Using Machine Learning.ipynb
+++ b/Analysis and Modelling/Potato Plant Disease Using Machine Learning.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7edd3f5e-306f-46ea-9ce4-3591602a1a1a",
+   "metadata": {},
+   "source": [
+    "# Importing Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "a450d30d-c825-48e2-8ef7-f3d84a8ad400",
@@ -41,6 +49,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "884a4b4b-b6c0-47f3-aefa-e7613c6e9b13",
+   "metadata": {},
+   "source": [
+    "# Importing Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "eb70b3ab-ef88-43b7-8778-f89e4a470b82",
@@ -53,6 +69,14 @@
     "# Define labels (assumes folder names are class names)\n",
     "class_labels = os.listdir(dataset_path)\n",
     "class_mapping = {label: idx for idx, label in enumerate(class_labels)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6f6fb31-2d6b-4a4e-a0b1-117e6dd51d35",
+   "metadata": {},
+   "source": [
+    "# Feature Extraction"
    ]
   },
   {
@@ -94,6 +118,14 @@
    ],
    "source": [
     "print(\"Training feature shape:\", np.array(X[0]).shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75b7d30e-6d97-428f-8c62-2f862c09bced",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
    ]
   },
   {
@@ -161,6 +193,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fff0645-c03e-42ad-973b-a146e74f3aad",
+   "metadata": {},
+   "source": [
+    "# Splitting the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "5c104a0d-5d67-47cf-89d7-f712046474ab",
@@ -169,6 +209,14 @@
    "source": [
     "# Split dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1642d5e9-99b5-4c01-bf14-a1f5466c67ab",
+   "metadata": {},
+   "source": [
+    "# Training models"
    ]
   },
   {
@@ -1461,6 +1509,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07b4af87-65ef-4c34-be5a-3d7aa139fe50",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "a943d900-1b5f-45ac-8f30-16b79f4bc079",
@@ -1514,6 +1570,14 @@
     "    print(f\"Recall: {rec:.4f}\")\n",
     "    print(f\"F1-score: {f1:.4f}\")\n",
     "    print(\"=\"*40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34fab5c4-3afb-4afe-9cf1-4627e22498b9",
+   "metadata": {},
+   "source": [
+    "# Predictive System"
    ]
   },
   {
@@ -1573,6 +1637,14 @@
     "test_image_path = \"PlantVillage/Potato___healthy/046641c1-f837-49eb-b5f2-4109910a027c___RS_HL 1878.JPG\"  # Change this to the actual image path\n",
     "predicted_disease = predict_image(test_image_path, gb_model)  # Pass gb_model directly\n",
     "print(f\"Predicted Disease: {predicted_disease}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f832903-87b7-484f-acac-d0bcd72086a2",
+   "metadata": {},
+   "source": [
+    "# Saving the best model"
    ]
   },
   {
